feat: solucion tarea