@@ -9,35 +9,36 @@ import java.time.Instant;
 public class SaludoService {
 
     public SaludoResponse crearSaludo(String nombre) {
+
         String nombreNormalizado = normalizarNombre(nombre);
-        String mensaje = "Hola, %s. Bienvenido a Spring Boot 3!".formatted(nombreNormalizado);
+
+        String mensaje = "Hola, %s. Bienvenido a Spring Boot 3!"
+                .formatted(nombreNormalizado);
+
         return new SaludoResponse(mensaje, Instant.now());
     }
 
-    /*
-    PASO 4 (EJERCICIO):
-    - Modifica esta logica para personalizar el formato del nombre.
-    - Ideas:
-      1) Primera letra mayuscula y resto minuscula.
-      2) Rechazar nombres con numeros.
-      3) Agregar prefijo "Estudiante".
-    */
     String normalizarNombre(String nombre) {
-    	if (nombre == null || nombre.trim().isEmpty()) {
-            throw new IllegalArgumentException("El nombre no puede estar vacío");
+
+        if (nombre == null || nombre.isBlank()) {
+            throw new IllegalArgumentException(
+                    "El nombre no puede estar vacío"
+            );
         }
 
         nombre = nombre.trim();
 
-        // Validar que no tenga números
+        // Validar caracteres inválidos
         if (!nombre.matches("[a-zA-ZáéíóúÁÉÍÓÚñÑ ]+")) {
-            throw new IllegalArgumentException("El nombre no debe contener números ni caracteres inválidos");
+            throw new IllegalArgumentException(
+                    "El nombre no debe contener números ni caracteres inválidos"
+            );
         }
 
-        // Capitalizar (Primera letra mayúscula)
-        nombre = nombre.substring(0,1).toUpperCase() + nombre.substring(1).toLowerCase();
+        // Primera letra mayúscula
+        nombre = nombre.substring(0, 1).toUpperCase()
+                + nombre.substring(1).toLowerCase();
 
-        // Opcional: agregar prefijo
         return "Estudiante " + nombre;
     }
 }
